<?xml version="1.0" encoding="utf-8"?>
<!-- res/layout/activity_card.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:layout_height="match_parent">

    <!-- Logged In User Info -->
    <TextView
        android:id="@+id/textViewLoggedInUser"
        android:text="Logged In As: "
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/buttonLogout"
        android:text="Log Out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp" />

    <!-- Search Card Section -->
    <TextView
        android:text="@string/search_card"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp" />

    <EditText
        android:id="@+id/editTextSearch"
        android:hint="@string/card_to_search_for"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/buttonSearchCard"
        android:text="@string/search_card_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/textViewSearchResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp" />

    <!-- Add Card Section -->
    <TextView
        android:text="@string/add_card"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp" />

    <EditText
        android:id="@+id/editTextAddCard"
        android:hint="@string/card_to_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/buttonAddCard"
        android:text="@string/add_card_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/textViewAddCardMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp" />

</LinearLayout>
