<?xml version="1.0" encoding="utf-8"?>
<!-- res/layout/activity_verify.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editTextVerificationCode"
        android:hint="@string/verification_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/buttonVerify"
        android:text="@string/verify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp" />

    <TextView
        android:id="@+id/textViewVerificationMessage"
        android:textColor="#FF0000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/buttonReturnToLogin"
        android:text="@string/return_to_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:visibility="gone" />

</LinearLayout>
